bk_ida/gccida/g0/invalidate_for_call
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/invalidate_for_call/src/cse.c:2569:2: error: expected expression
 struct cse_reg_info = cached_cse_reg_info; 
 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/invalidate_for_call/src/cse.c:2571:2: error: expected expression
 struct cse_reg_info = get_cse_reg_info( regno); 
 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/invalidate_for_call/src/cse.c:2626:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[*( ( unsigned __int8 *)p->exp + 2)] == MODE_COMPLEX_INT 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/invalidate_for_call/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/invalidate_for_call/src/cse.c:2627:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)p->exp + 2)] == MODE_COMPLEX_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/invalidate_for_call/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/invalidate_for_call/src/obj/cse.o] Error 1
